Package: R.rsp
==============

Version: 0.20.0-9000 [2015-05-11]
o Added postprocessor for PDF compression, which can be enabled
  and controlled vua meta variable 'compression', e.g.
  <%@meta compression="gs(ebook)"%>.
o Setting meta variable 'postprocess' to FALSE can now be used to
  disable postprocessing, e.g. <%@meta postprocess=FALSE%> in
  foo.md.rsp builds foo.md and does not continue compiling into
  an HTML document as well, which is otherwise the default.


Version: 0.20.0 [2015-02-18]
o ROBUSTNESS: Now compileLaTeX() will give an error if the filename
  extension is neither *.tex nor *.ltx (case sensitive).  The reason
  for this is that it is only those that are recognized by the
  underlying 'texi2dvi' script (if a different filename extension is
  used, 'texi2dvi' will use 'texinfo' instead of 'latex' to compile
  the document which for obvious reasons will not compile; texinfo
  files are not LaTeX files).  I'd like to thank Kurt Hornik at CRAN
  for helping me troubleshoot this as I incorrectly had a static
  LaTeX vignette named *.latex.


Version: 0.19.8 [2015-02-04]
o Now all \VignetteKeyword{} entries inside a meta directives with
  language 'R-vignette' are parsed into meta data field 'keywords'.
o Added arguments 'header' and 'metadata' to compileMarkdown().
o Now the processor function returned by findProcessor() passes
  meta data as a named list to the underlying compiler/processor.
o Now the full RspFileProduct object is passed to postprocessors
  rather than its barebone pathname.


Version: 0.19.7 [2015-01-18]
o Added Unix shell (and Windows batch) scripts 'rsource', 'rfile'
  and 'rcat' moved to system.file("exec", package="R.rsp").  These
  scripts are convenient wrappers that use Rscript internally.
o CLEANUP: Defunct epsDev().
o BUG FIX: isCapableOf() for "asciidoc" and "pandoc" would given an
  error (instead of FALSE) if the binary was not found.


Version: 0.19.6 [2014-10-18]