@@ -2,8 +2,11 @@ Package: R.rsp
 ==============
 
 Version: 0.20.0-9000 [2015-05-11]
+o Added vignette option %\VignetteCompression{} for alternative
+  way of setting meta variable 'compression', e.g.
+  %\VignetteCompression{gs(ebook)+qpdf} to compressed PDF output.
 o Added postprocessor for PDF compression, which can be enabled
-  and controlled vua meta variable 'compression', e.g.
+  and controlled via meta variable 'compression', e.g.
   <%@meta compression="gs(ebook)"%>.
 o Setting meta variable 'postprocess' to FALSE can now be used to
   disable postprocessing, e.g. <%@meta postprocess=FALSE%> in
